// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkButton /> should render a disabled link button 1`] = `
<Anchor
  href="#"
  id="test-link-button-disabled"
>
  <span
    className="button neutral disabled"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a simple text 1`] = `
<Anchor
  href="#"
  id="test-link-button-simple"
>
  <span
    className="button neutral"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a size large 1`] = `
<Anchor
  href="#"
  id="test-link-button-large"
>
  <span
    className="button large neutral"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a type delete-subtle 1`] = `
<Anchor
  href="#"
  id="test-link-button-delete"
>
  <span
    className="button delete-subtle"
  >
    testing testing 123
  </span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with an icon 1`] = `
<Anchor
  href="test"
  icon={
    <FontAwesomeIcon
      type="star"
    />
  }
  id="test-link-button-icon"
>
  <span
    className="button primary"
  >
    <span
      className="button-icon"
      key="test-link-button-icon"
    >
      <FontAwesomeIcon
        type="star"
      />
    </span>
    Link Button with Icon
  </span>
</Anchor>
`;
